Add CoordinateParser class Add Unit tests for CoordinateParser

--- a/tests/BattleShips.UnitTests/BattleShips.UnitTests.csproj
+++ b/tests/BattleShips.UnitTests/BattleShips.UnitTests.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\BattleShips.ConsoleApp\BattleShips.ConsoleApp.csproj" />
     <ProjectReference Include="..\..\src\BattleShips.Domain\BattleShips.Domain.csproj" />
   </ItemGroup>
 
