--- a/src/BattleShips.ConsoleApp/BattleShips.ConsoleApp.csproj
+++ b/src/BattleShips.ConsoleApp/BattleShips.ConsoleApp.csproj
@@ -7,4 +7,8 @@
     <LangVersion>9</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BattleShips.Domain\BattleShips.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
